# smoljson

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  mac.rs  read.rs  value.rs  write.rs
tests/: read.rs  write.rs
